Fix message editing / scrolling on mobiles

--- a/root/css/common.css
+++ b/root/css/common.css
@@ -70,3 +70,12 @@ input {
 	outline: none;
 	box-shadow: none;
 }
+
+.unselectable {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
